file explorer open

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<span>Microsoft Edge</span>
       </div>
       
-      <div class="desktop-icon" onclick="toggleSelect(this); openFileExplorer()">
+      <div class="desktop-icon" onclick="toggleSelect(this); toggleWindow('fileExplorer')">
 	<svg viewBox="0 0 24 24" fill="none" stroke="#fafafa" stroke-width="2">
           <path d="M22 19a2 2 0 01-2 2H4a2 2 0 01-2-2V5a2 2 0 012-2h5l2 3h9a2 2 0 012 2z" />
 	</svg>
